# rs97-fixesgames

./: .gitignore  .gitsubmodules  README.md
apricots/: Makefile  README.md  SDLfont.cpp  SDLfont.h  apricots.cpp  apricots.h  drawall.cpp  finish.cpp  game.cpp  init.cpp  init.h  menu.cpp  menu.h  sampleio.cpp  sampleio.h  shape.h
arkanoid/: LISEZMOI.DINGUX  Makefile  Makefile.linux  README.DINGUX  _LISEZMOI.txt  _README.txt  anims.c  anims.h  animspr.c  animspr.h  arkanoid  breaker.c  breaker.h  ctypes.h  dust.c  dust.h  fire.c  fire.h  font.c  font.h  frame.c  includes.h  levels.h  main.c  menu.c  menu.h  monsters.c  monsters.h  mst.c  mst.h  preca.c  preca.h  snd.c  snd.h  sprites.c  sprites.h
asciiportal/: Makefile.linux  how_to_build  how_to_build.txt
bard/: .time-stamp  Makefile  README  config.status  configure  configure.in
bermuda/: Makefile  README.OPENDINGUX  bs  dialogue.cpp  main.cpp  mixer.cpp  parser_scn.cpp  readme.retrogame  resource.cpp  saveload.cpp  staticres.cpp  systemstub.h  systemstub_sdl.cpp  util.cpp
boulder/: Boulder 2.dev  CREDITS.txt  Makefile  README.txt  boulder  indication.txt  version.txt
cdogs/: CMakeLists.txt  make_rs97.sh
chroma/: CHANGELOG  INSTALL  Makefile  Makefile.in  Makefile.mingw  README  actions.h  chroma  chroma-curses  chroma.h  chroma.nsi  colours.c  colours.h  config.status  configure  configure.ac  cursesdisplay.c  cursesmenudisplay.c  display.h  editor.c  engine.c  enigma.c  graphics.c  graphics.h  iconcurses.rc  iconsdl.rc  level.c  level.h  main.c  menu.c  menu.h  names.c  sdldisplay.c  sdlfont.c  sdlfont.h  sdlmenudisplay.c  sdlscreen.c  sdlscreen.h  sdlshadowdisplay.c  util.c  (+4 more)
chroma/colours/: chroma-monochrome.chroma
chroma/help/: README
chroma/levels/chroma-1/: chroma-1-01.chroma  chroma-1-03.chroma  chroma-1-04.chroma  chroma-1-05.chroma  chroma-1-06.chroma
chroma/levels/chroma-2/: chroma-2-04.chroma  chroma-2-05.chroma  chroma-2-06.chroma  chroma-2-07.chroma  chroma-2-09.chroma  chroma-2-11.chroma  chroma-2-12.chroma
chroma/levels/regression/: enigma-regression.chroma  set.chroma  xor-regression.chroma
chroma/po/: en_US.po
chroma/resources/: convert2chroma.pl  crush.pl  make-base-marble.pl  make-graphics.sh  make-pieces-neon.pl  make-pieces-zen.pl  make-wall-marble.pl
chroma/retrogame/: chroma
chroma/retrogame/colours/: chroma-enhanced.chroma  chroma-enigma.chroma  chroma-reverse.chroma  chroma-standard.chroma  fallback.chroma
chroma/retrogame/graphics/: chroma-marble.chroma  chroma-neon.chroma  chroma-zen.chroma  curses.chroma  fallback.chroma
chroma/retrogame/levels/chroma-1/: chroma-1-02.chroma  chroma-1-07.chroma  chroma-1-08.chroma  chroma-1-09.chroma  set.chroma
chroma/retrogame/levels/chroma-2/: chroma-2-01.chroma  chroma-2-02.chroma  chroma-2-03.chroma  chroma-2-08.chroma  chroma-2-10.chroma  set.chroma
chroma/retrogame/levels/regression/: chroma-pieces.chroma  chroma-regression.chroma
chroma/retrogame/locale/en_US/LC_MESSAGES/: chroma.mo
chroma/retrogame/po/: README  chroma.pot
chroma/retrogame/resources/: README  make-pieces-marble.pl
commander/: Makefile  commander.cpp  def.h  main.cpp
dcastaway/: Makefile  Makefile.dc  Makefile.dingux  Makefile.linux  Makefile.macosx  Makefile.windows  readme.txt
digger/: .cproject  .project  def.h  fbsd_sup.c  input.c  main.c  scores.c  sdl_kbd.c  sdl_snd.c  sdl_vid.c  sound.c  title_gz.c
dingux-atari/: AUTHORS.txt  COPYING.txt  ChangeLog.txt  Makefile  README.txt  SDL_pspvideo.c  (+57 more)
(+2986 files in other folders)
